[tool.poetry]
name = "Kart"
version = "0.8.1"
description = "A very flexible static site generator written in python"
authors = ["Giacomo Caironi <giacomo.caironi@gmail.com>"]
license = "MIT"
readme = 'README.md'
include = ["kart_quickstart/**/*"]
exclude = ['kart_quickstart/_site/**/*']

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^2.11"
pyyaml = '^5.1'
feedgen = "^0.9"
mistune = "2.0.0a6"
pygments = "^2.6.1"
watchdog = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
