[tool.poetry]
name = "Kart"
version = "0.13.0"
description = "A very flexible static site generator written in python"
authors = ["Giacomo Caironi <giacomo.caironi@gmail.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^3.0"
pyyaml = '^5.1'
mistune = "2.0.0rc1"
pygments = "^2.6.1"
watchdog = "^0.10.3"
python-slugify = "^4.0.1"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
