[tool.poetry]
name = "Kart"
version = "0.14.0"
description = "A very flexible static site generator written in python"
authors = ["Giacomo Caironi <giacomo.caironi@gmail.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "~3.1"
pyyaml = '^6.0'
mistune = "^2.0"
pygments = "^2.6.1"
watchdog = "^2.1"
python-slugify = "^4.0.1"
python-dateutil = "^2.8.2"
tomli = {version = "^2.0.1", optional = true}

[tool.poetry.extras]
toml = ["tomli"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
